--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ fragments that they document.</p>
 you just type <code>citare</code>.</p>
 </li>
 </ul>
-<p>Contains <a href="lib/utils/brief.html">brief</a> function specification highlight (works with github flavored markdown):</p>
+<p>Contains <a href="http://druide.github.com/citare-scriptum/lib/utils/brief.html">brief</a> function specification highlight (works with github flavored markdown):</p>
 <p><code>functionName(Type argument1, Type1/Type2 argument2, Type optionalArgument1?): Type</code></p>
 <h2 id="how">How?</h2>
 <h3 id="installing-citare">Installing citare</h3>
@@ -40,7 +40,7 @@ in order!</p>
 <p>Once you are pleased with the output, you can push your docs to your github pages branch:</p>
 <pre><code>citare --github &quot;lib/**/*.coffee&quot; README.md</code></pre>
 <p>Citare will automagically create and push the <code>gh-pages</code> branch if it is missing.</p>
-<p>There are <a href="lib/cli.html#cli-options">additional options</a> supported by
+<p>There are <a href="http://druide.github.com/citare-scriptum/lib/cli.html#cli-options">additional options</a> supported by
 citare, if you are interested.</p>
 <h3 id="configuring-citare-citarejson">Configuring citare (.citare.json)</h3>
 <p>Citare supports a simple JSON configuration format once you know the config values that appeal to you.</p>
