--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html><html lang="en"><head><title>index</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content=""><meta name="citare-document-path" content="index"><meta name="citare-project-path" content="README.md"><meta name="citare-github-url" content="https://github.com/druide/citare-scriptum"><link rel="stylesheet" type="text/css" media="all" href="assets/style.css"><script type="text/javascript" src="assets/behavior.js"></script><body><div id="meta" class="commentsonly"><div class="file-path"><a href="https://github.com/druide/citare-scriptum/blob/master/README.md">README.md</a></div></div><div id="document" class="commentsonly"><div class="segment commentsonly"><div class="comments commentsonly"><div class="wrapper"><h1 id="citare">Citare</h1>
+<!DOCTYPE html><html lang="en"><head><title>index</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content=""><meta name="citare-document-path" content="index"><meta name="citare-project-path" content="README.md"><meta name="citare-github-url" content="https://github.com/druide/citare-scriptum"><link rel="stylesheet" type="text/css" media="all" href="assets/style.css"><script type="text/javascript" src="assets/behavior.js"></script><body><div id="meta" class="commentsonly"><div class="file-path"><a href="https://github.com/druide/citare-scriptum/blob/master/README.md">README.md</a></div></div><div id="document" class="commentsonly"><div class="segment commentsonly nocode"><div class="comments commentsonly"><div class="wrapper"><h1><a name="citare" class="anchor" href="#citare"><span></span></a>Citare</h1>
 <p>Citare takes your <em>documented</em> code, and in an admission that people aren&#39;t machines,
 generates documentation that follows the spirit of literate programming.  Take a look at the
 <a href="http://druide.github.com/citare-scriptum/">self-generated documentation</a>, and see if it appeals to you!</p>
 <p>It is very heavily influenced by <a href="https://github.com/jashkenas">Jeremy Ashkenas</a>&#39;
 <a href="http://jashkenas.github.com/docco/">docco</a>, and is an attempt to further enhance the idea (thus,
 citare can‘t tout the same quick ’n dirty principles of docco).</p>
-<h2 id="what-does-it-give-you">What does it give you?</h2>
+<h2><a name="what-does-it-give-you" class="anchor" href="#what-does-it-give-you"><span></span></a>What does it give you?</h2>
 <p>Citare will:</p>
 <ul>
 <li><p>Generate documentation from your source code, by displaying your <a href="https://github.com/chjj/marked">Marked</a> formatted comments next to the code
@@ -23,13 +23,13 @@ you just type <code>citare</code>.</p>
 </ul>
 <p>Contains <a href="http://druide.github.com/citare-scriptum/lib/utils/brief.html">brief</a> function specification highlight (works with github flavored markdown):</p>
 <p><code>functionName(Type argument1, Type1/Type2 argument2, Type optionalArgument1?): Type</code></p>
-<h2 id="how">How?</h2>
-<h3 id="installing-citare">Installing citare</h3>
+<h2><a name="how" class="anchor" href="#how"><span></span></a>How?</h2>
+<h3><a name="installing-citare" class="anchor" href="#installing-citare"><span></span></a>Installing citare</h3>
 <p>Citare depends on <a href="http://nodejs.org/">Node.js</a>. Once you have this installed - and assuming that
 your node install came with <a href="http://npmjs.org/">npm</a> - you can install citare via:</p>
 <pre><code>npm install -g citare-scriptum</code></pre>
 <p>You may need to prefix the command with sudo, depending on how you installed node.</p>
-<h3 id="using-citare-cli">Using citare (CLI)</h3>
+<h3><a name="using-citare-cli" class="anchor" href="#using-citare-cli"><span></span></a>Using citare (CLI)</h3>
 <p>To generate documentation, just point citare to source files that you want docs for:</p>
 <pre><code>citare *.js</code></pre>
 <p>Citare will also handle extended globbing syntax if you quote arguments:</p>
@@ -42,7 +42,7 @@ in order!</p>
 <p>Citare will automagically create and push the <code>gh-pages</code> branch if it is missing.</p>
 <p>There are <a href="http://druide.github.com/citare-scriptum/lib/cli.html#cli-options">additional options</a> supported by
 citare, if you are interested.</p>
-<h3 id="configuring-citare-citarejson">Configuring citare (.citare.json)</h3>
+<h3><a name="configuring-citare-citarejson" class="anchor" href="#configuring-citare-citarejson"><span></span></a>Configuring citare (.citare.json)</h3>
 <p>Citare supports a simple JSON configuration format once you know the config values that appeal to you.</p>
 <p>Create a <code>.citare.json</code> file in your project root, where each key maps to an option you would pass to
 the <code>citare</code> command.  File names and globs are defined as an array with the key <code>glob</code>.  For
@@ -54,7 +54,7 @@ example, citare&#39;s own configuration is:</p>
   &quot;gfm&quot;: false
 }</code></pre>
 <p>From now on, if you call <code>citare</code> without any arguments, it will use your pre-defined configuration.</p>
-<h2 id="difference-from-groc">Difference from groc</h2>
+<h2><a name="difference-from-groc" class="anchor" href="#difference-from-groc"><span></span></a>Difference from groc</h2>
 <p>Citare is a fork of documentation project <a href="https://github.com/nevir/groc">groc</a> written by
 <a href="https://github.com/nevir">Ian MacLeod</a>. It is backward-compatable with groc (have the same options and
 understands <code>.groc.json</code>) and have the following changes:</p>
@@ -69,7 +69,7 @@ syntax highlighter</li>
 <li><code>[Any Title]</code> syntax for auto linking to any title in the project (for now citare does
 not resolve duplicate titles so link will point to the first found duplicate title)</li>
 </ul>
-<h2 id="literate-programming">Literate programming?</h2>
+<h2><a name="literate-programming" class="anchor" href="#literate-programming"><span></span></a>Literate programming?</h2>
 <p><a href="http://en.wikipedia.org/wiki/Literate_programming">Literate programming</a> is a programming
 methodology coined by <a href="http://en.wikipedia.org/wiki/Donald_Knuth">Donald Knuth</a>.  The primary tenet
 is that you write a program so that the structure of both the code and documentation align with
