--- a/lib/cli.html
+++ b/lib/cli.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><title>lib/cli</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content="../"><meta name="citare-document-path" content="lib/cli"><meta name="citare-project-path" content="lib/cli.coffee"><meta name="citare-github-url" content="https://github.com/druide/citare-scriptum"><link rel="stylesheet" type="text/css" media="all" href="../assets/style.css"><script type="text/javascript" src="../assets/behavior.js"></script><body><div id="bg"></div><div id="meta"><div class="file-path"><a href="https://github.com/druide/citare-scriptum/blob/master/lib/cli.coffee">lib/cli.coffee</a></div></div><div id="document"><div class="segment"><div class="comments"><div class="wrapper"><h1 id="command-line-interface">Command Line Interface</h1></div></div><div class="code"><div class="wrapper">childProcess = require <span class="string">'child_process'</span>
+<!DOCTYPE html><html lang="en"><head><title>lib/cli</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content="../"><meta name="citare-document-path" content="lib/cli"><meta name="citare-project-path" content="lib/cli.coffee"><meta name="citare-github-url" content="https://github.com/druide/citare-scriptum"><link rel="stylesheet" type="text/css" media="all" href="../assets/style.css"><script type="text/javascript" src="../assets/behavior.js"></script><body><div id="bg"></div><div id="meta"><div class="file-path"><a href="https://github.com/druide/citare-scriptum/blob/master/lib/cli.coffee">lib/cli.coffee</a></div></div><div id="document" class="codedoc"><div class="segment"><div class="comments"><div class="wrapper"><h1><a name="command-line-interface" class="anchor" href="#command-line-interface"><span></span></a>Command Line Interface</h1></div></div><div class="code"><div class="wrapper">childProcess = require <span class="string">'child_process'</span>
 fs           = require <span class="string">'fs'</span>
 path         = require <span class="string">'path'</span>
 
@@ -20,7 +20,7 @@ too comfortable with the user’s next shell line.</p></div></div><div class="co
     console.log <span class="string">''</span>
 
     actualCallback args...</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>We use <a href="https://github.com/substack/node-optimist">Optimist</a> to parse our command line arguments
-in a sane manner, and manage the myriad of options.</p></div></div><div class="code"><div class="wrapper">  opts = optimist inputArgs</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><h2 id="cli-overview">CLI Overview</h2></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>Readable command line output is just as important as readable documentation! It is the first
+in a sane manner, and manage the myriad of options.</p></div></div><div class="code"><div class="wrapper">  opts = optimist inputArgs</div></div></div><div class="segment nocode"><div class="comments"><div class="wrapper"><h2><a name="cli-overview" class="anchor" href="#cli-overview"><span></span></a>CLI Overview</h2></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>Readable command line output is just as important as readable documentation! It is the first
 interaction that a developer will have with a tool like this, so we want to leave a good
 impression with nicely formatted and readable output.</p></div></div><div class="code"><div class="wrapper">  opts
     .usage(<span class="string">"""
@@ -33,7 +33,7 @@ impression with nicely formatted and readable output.</p></div></div><div class=
     .citare.json.  It should contain a mapping between option names and their values.  For example:
 
       { "glob": ["lib", "vendor"], out: "documentation", strip: [] }
-    """</span>)</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><h2 id="cli-options">CLI Options</h2></div></div><div class="code"><div class="wrapper">  optionsConfig =
+    """</span>)</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><h2><a name="cli-options" class="anchor" href="#cli-options"><span></span></a>CLI Options</h2></div></div><div class="code"><div class="wrapper">  optionsConfig =
 
     help:
       describe: <span class="string">"You're looking at it."</span>
@@ -91,7 +91,7 @@ impression with nicely formatted and readable output.</p></div></div><div class=
       type:     <span class="string">'boolean'</span>
 
     <span class="string">'comments-only'</span>:
-      describe: <span class="string">"Generate documentation only from comment, source code will not be included."</span>
+      describe: <span class="string">"Generate documentation from comments only, source code will not be included."</span>
       <span class="reserved">default</span>:  <span class="literal">false</span>
       type:     <span class="string">'boolean'</span>
 
@@ -114,7 +114,7 @@ impression with nicely formatted and readable output.</p></div></div><div class=
       describe: <span class="string">"Hey, you asked for it."</span>
 
     <span class="string">'footer'</span>:
-      describe: <span class="string">"Footer text"</span></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><h2 id="argument-processing">Argument processing</h2></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>We treat the values within the current project&#39;s <code>.citare.json</code> as defaults, so that you can
+      describe: <span class="string">"Footer text"</span></div></div></div><div class="segment nocode"><div class="comments"><div class="wrapper"><h2><a name="argument-processing" class="anchor" href="#argument-processing"><span></span></a>Argument processing</h2></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>We treat the values within the current project&#39;s <code>.citare.json</code> as defaults, so that you can
 easily override the persisted configuration when testing and tweaking.</p>
 <p>For example, if you have configured your <code>.citare.json</code> to include <code>&quot;github&quot;: true</code>, it is
 extremely helpful to use <code>citare --no-github</code> until you are satisfied with the generated output.</p></div></div><div class="code"><div class="wrapper">  projectConfigPath = path.resolve <span class="string">'.citare.json'</span>
@@ -146,7 +146,7 @@ one of those things that you might want to reference from other scripts.</p></di
 against the shell execution lines and blurring together; use that whitespace
 with great gusto!</p></div></div><div class="code"><div class="wrapper">  console.log <span class="string">''</span>
 
-  <span class="keyword">return</span> console.log opts.help() <span class="keyword">if</span> argv.help</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><h2 id="project-generation">Project Generation</h2></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>A <a href="project.html">Project</a> is just a handy way to configure the generation process, and is in
+  <span class="keyword">return</span> console.log opts.help() <span class="keyword">if</span> argv.help</div></div></div><div class="segment nocode"><div class="comments"><div class="wrapper"><h2><a name="project-generation" class="anchor" href="#project-generation"><span></span></a>Project Generation</h2></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>A <a href="project.html">Project</a> is just a handy way to configure the generation process, and is in
 charge of kicking that off.</p></div></div><div class="code"><div class="wrapper">  project = <span class="keyword">new</span> Project argv.root, argv.out</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p><code>--silent</code>, <code>--verbose</code> and <code>--very-verbose</code> just impact the logging level of the project.</p></div></div><div class="code"><div class="wrapper">  project.log.minLevel = Logger::LEVELS.ERROR <span class="keyword">if</span> argv.silent
   project.log.minLevel = Logger::LEVELS.DEBUG <span class="keyword">if</span> argv.verbose
   project.log.minLevel = Logger::LEVELS.TRACE <span class="keyword">if</span> argv[<span class="string">'very-verbose'</span>]</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>Set up project-specific options as we get them.</p></div></div><div class="code"><div class="wrapper">  project.options.requireWhitespaceAfterToken = !!argv[<span class="string">'whitespace-after-token'</span>]
@@ -183,7 +183,7 @@ differently depending on whether or not github is enabled, let’s set those up 
     style: styles[argv.style]</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>Good to go!</p></div></div><div class="code"><div class="wrapper">  <span class="keyword">unless</span> argv.github
     project.githubURL = argv[<span class="string">'repository-url'</span>] <span class="keyword">if</span> argv[<span class="string">'repository-url'</span>]?
     project.generate options, (error) -&gt;
-      callback error</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><h2 id="github">GitHub</h2></div></div><div class="code"><div class="wrapper">  <span class="keyword">else</span></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>We want to be able to annotate generated documentation with the project‘s GitHub URL.  This is
+      callback error</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><h2><a name="github" class="anchor" href="#github"><span></span></a>GitHub</h2></div></div><div class="code"><div class="wrapper">  <span class="keyword">else</span></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>We want to be able to annotate generated documentation with the project‘s GitHub URL.  This is
 handy for things like generating links directly to each file’s source.</p></div></div><div class="code"><div class="wrapper">    CLIHelpers.guessPrimaryGitHubURL argv[<span class="string">'repository-url'</span>], (error, url, remote) -&gt;
       console.log <span class="string">"publish_to_github"</span>, error, url, remote
 
