--- a/lib/languages.html
+++ b/lib/languages.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><title>lib/languages</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content="../"><meta name="citare-document-path" content="lib/languages"><meta name="citare-project-path" content="lib/languages.coffee"><meta name="citare-github-url" content="https://github.com/druide/citare-scriptum"><link rel="stylesheet" type="text/css" media="all" href="../assets/style.css"><script type="text/javascript" src="../assets/behavior.js"></script><body><div id="bg"></div><div id="meta"><div class="file-path"><a href="https://github.com/druide/citare-scriptum/blob/master/lib/languages.coffee">lib/languages.coffee</a></div></div><div id="document"><div class="segment"><div class="comments"><div class="wrapper"><h1 id="supported-languages">Supported Languages</h1></div></div><div class="code"><div class="wrapper">module.exports = LANGUAGES =
+<!DOCTYPE html><html lang="en"><head><title>lib/languages</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content="../"><meta name="citare-document-path" content="lib/languages"><meta name="citare-project-path" content="lib/languages.coffee"><meta name="citare-github-url" content="https://github.com/druide/citare-scriptum"><link rel="stylesheet" type="text/css" media="all" href="../assets/style.css"><script type="text/javascript" src="../assets/behavior.js"></script><body><div id="bg"></div><div id="meta"><div class="file-path"><a href="https://github.com/druide/citare-scriptum/blob/master/lib/languages.coffee">lib/languages.coffee</a></div></div><div id="document" class="codedoc"><div class="segment"><div class="comments"><div class="wrapper"><h1><a name="supported-languages" class="anchor" href="#supported-languages"><span></span></a>Supported Languages</h1></div></div><div class="code"><div class="wrapper">module.exports = LANGUAGES =
   Markdown:
     nameMatchers: [<span class="string">'.md'</span>, <span class="string">'.txt'</span>, <span class="string">'.litcoffee'</span>]
     commentsOnly: <span class="literal">true</span>
@@ -30,7 +30,7 @@
     nameMatchers: [<span class="string">'.coffee'</span>, <span class="string">'Cakefile'</span>]
     lexer: <span class="string">'coffeescript'</span>
     singleLineComment: [<span class="string">'#'</span>]
-    multiLineComment: [<span class="regexp">///^\s*<span class="comment">##[#]+\s*$///]</span>
+    multiLineComment: [<span class="regexp">///^\s*<span class="comment">###\s*$///]</span>
 
   Go:
     nameMatchers: ['.go']
