--- a/lib/styles/default/docPage.html
+++ b/lib/styles/default/docPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><title>lib/styles/default/docPage</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content="../../../"><meta name="citare-document-path" content="lib/styles/default/docPage"><meta name="citare-project-path" content="lib/styles/default/docPage.jade"><meta name="citare-github-url" content="https://github.com/druide/citare-scriptum"><link rel="stylesheet" type="text/css" media="all" href="../../../assets/style.css"><script type="text/javascript" src="../../../assets/behavior.js"></script><body><div id="bg"></div><div id="meta"><div class="file-path"><a href="https://github.com/druide/citare-scriptum/blob/master/lib/styles/default/docPage.jade">lib/styles/default/docPage.jade</a></div></div><div id="document"><div class="segment"><div class="comments"><div class="wrapper"><p>Default page template</p></div></div><div class="code"><div class="wrapper">!!! <span class="number">5</span>
+<!DOCTYPE html><html lang="en"><head><title>lib/styles/default/docPage</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content="../../../"><meta name="citare-document-path" content="lib/styles/default/docPage"><meta name="citare-project-path" content="lib/styles/default/docPage.jade"><meta name="citare-github-url" content="https://github.com/druide/citare-scriptum"><link rel="stylesheet" type="text/css" media="all" href="../../../assets/style.css"><script type="text/javascript" src="../../../assets/behavior.js"></script><body><div id="bg"></div><div id="meta"><div class="file-path"><a href="https://github.com/druide/citare-scriptum/blob/master/lib/styles/default/docPage.jade">lib/styles/default/docPage.jade</a></div></div><div id="document" class="codedoc"><div class="segment"><div class="comments"><div class="wrapper"><p>Default page template</p></div></div><div class="code"><div class="wrapper">!!! <span class="number">5</span>
 html(lang=<span class="string">"en"</span>)
   head
     title= targetPath
@@ -22,10 +22,11 @@ html(lang=<span class="string">"en"</span>)
       - <span class="keyword">else</span>
         .file-path= projectPath
 
-    #document(class=commentsOnly ? <span class="string">"commentsonly"</span> : <span class="string">""</span>)
+    #document(class=commentsOnly ? <span class="string">"commentsonly"</span> : <span class="string">"codedoc"</span>)
       - <span class="keyword">for</span> (<span class="keyword">var</span> i <span class="keyword">in</span> segments)
         - <span class="keyword">if</span> (missingDoc || segments[i].markdownedComments != <span class="string">''</span>)
-          .segment(class=commentsOnly ? <span class="string">"commentsonly"</span> : <span class="string">""</span>)
+          - <span class="keyword">var</span> addCodeClass = segments[i].highlightedCode == <span class="string">''</span> ? <span class="string">"nocode"</span> : <span class="string">""</span>
+          .segment(class=commentsOnly ? <span class="string">"commentsonly "</span> + addCodeClass : addCodeClass)
             - <span class="keyword">if</span> (segments[i].markdownedComments != <span class="string">''</span>)
               .comments(class=commentsOnly ? <span class="string">"commentsonly"</span> : <span class="string">""</span>)
                 .wrapper!= segments[i].markdownedComments
