--- a/lib/utils.html
+++ b/lib/utils.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><title>lib/utils</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content="../"><meta name="citare-document-path" content="lib/utils"><meta name="citare-project-path" content="lib/utils.coffee"><meta name="citare-github-url" content="https://github.com/druide/citare-scriptum"><link rel="stylesheet" type="text/css" media="all" href="../assets/style.css"><script type="text/javascript" src="../assets/behavior.js"></script><body><div id="bg"></div><div id="meta"><div class="file-path"><a href="https://github.com/druide/citare-scriptum/blob/master/lib/utils.coffee">lib/utils.coffee</a></div></div><div id="document"><div class="segment"><div class="comments"><div class="wrapper"><p>Miscellaneous code fragments reside here.</p>
+<!DOCTYPE html><html lang="en"><head><title>lib/utils</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content="../"><meta name="citare-document-path" content="lib/utils"><meta name="citare-project-path" content="lib/utils.coffee"><meta name="citare-github-url" content="https://github.com/druide/citare-scriptum"><link rel="stylesheet" type="text/css" media="all" href="../assets/style.css"><script type="text/javascript" src="../assets/behavior.js"></script><body><div id="bg"></div><div id="meta"><div class="file-path"><a href="https://github.com/druide/citare-scriptum/blob/master/lib/utils.coffee">lib/utils.coffee</a></div></div><div id="document" class="codedoc"><div class="segment"><div class="comments"><div class="wrapper"><p>Miscellaneous code fragments reside here.</p>
 <p>TODO: These should be migrated into <code>lib/utils</code>.</p></div></div><div class="code"><div class="wrapper">childProcess = require <span class="string">'child_process'</span>
 path         = require <span class="string">'path'</span>
 
@@ -110,10 +110,10 @@ array to update indices.</p></div></div><div class="code"><div class="wrapper"> 
             incomment = <span class="literal">false</span>
             pos1 = line.indexOf match2[<span class="number">0</span>]
             pos2 = line.indexOf match3[<span class="number">0</span>]
-            pushComment line.substring(pos1 + match2[<span class="number">0</span>].length, pos2)
+            pushComment line.substring(pos1 + match2[<span class="number">0</span>].length + <span class="number">1</span>, pos2)
             pushCode line.substring(pos2 + match3[<span class="number">0</span>].length)
           <span class="keyword">else</span>
-            pushComment line.replace(match2[<span class="number">0</span>], whiteSpace(match2[<span class="number">0</span>].length))
+            pushComment line.replace(match2[<span class="number">0</span>], whiteSpace(match2[<span class="number">0</span>].length - <span class="number">1</span>))
         <span class="keyword">else</span>
           <span class="keyword">if</span> match3?
             <span class="keyword">if</span> !incomment
@@ -121,12 +121,13 @@ array to update indices.</p></div></div><div class="code"><div class="wrapper"> 
             <span class="keyword">else</span>
               pos = line.indexOf match3[<span class="number">0</span>]
               pushComment line.substring(<span class="number">0</span>, pos)
-              pushCode line.substring(pos + match3[<span class="number">0</span>].length)
+              pushCode line.substring(pos + match3[<span class="number">0</span>].length + <span class="number">1</span>)
             incomment = <span class="literal">false</span>
           <span class="keyword">else</span>
             <span class="keyword">if</span> incomment
               pushComment line
-            <span class="keyword">else</span>
+            <span class="keyword">else</span></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>custom delimiter in coffescript source</p></div></div><div class="code"><div class="wrapper">              <span class="keyword">if</span> line.match(<span class="regexp">/^[#]{4,}/</span>)
+                pushComment <span class="string">""</span>
               pushCode line
 
     segments.push currSegment
@@ -151,9 +152,16 @@ array to update indices.</p></div></div><div class="code"><div class="wrapper"> 
       segment.comments[i] = line.slice(spaces)</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>handle &quot;*&quot; started block comments</p></div></div><div class="code"><div class="wrapper">    <span class="keyword">if</span> segment.comments.length &gt; <span class="number">1</span>
       isAsterixComment = <span class="literal">true</span>
       <span class="keyword">for</span> line, i <span class="keyword">in</span> segment.comments
-        <span class="keyword">if</span> line != <span class="string">""</span> <span class="keyword">and</span> line[<span class="number">0</span>] != <span class="string">"*"</span>
+        <span class="keyword">if</span> i == <span class="number">0</span> <span class="keyword">and</span> line.length != <span class="number">0</span>
           isAsterixComment = <span class="literal">false</span>
           <span class="keyword">break</span>
+        <span class="keyword">else</span> <span class="keyword">if</span> i == <span class="number">1</span> <span class="keyword">and</span> !(line.length == <span class="number">0</span> <span class="keyword">or</span> line[<span class="number">0</span>] == <span class="string">" "</span>)
+          isAsterixComment = <span class="literal">false</span>
+          <span class="keyword">break</span>
+        <span class="keyword">else</span>
+          <span class="keyword">if</span> line.trim().length != <span class="number">0</span> <span class="keyword">and</span> line[<span class="number">0</span>] != <span class="string">"*"</span>
+            isAsterixComment = <span class="literal">false</span>
+            <span class="keyword">break</span>
       <span class="keyword">if</span> isAsterixComment
         <span class="keyword">for</span> line, i <span class="keyword">in</span> segment.comments
           segment.comments[i] = line.substring(<span class="number">1</span>)
@@ -187,7 +195,7 @@ something a bit more readable.</p></div></div><div class="code"><div class="wrap
           headers.push header
           tocHeaders.push header
 
-          "&lt;h<span class="comment">#{header.level} id=\"#{header.slug}\"&gt;#{header.title}&lt;/h#{header.level}&gt;"</span></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>temporary replace auto-links inside code blocks</p></div></div><div class="code"><div class="wrapper">        markdown = <span class="property">@gsub</span> markdown, <span class="regexp">/(\&lt;pre\&gt;.*)(\[[^\]]+\])(.*\&lt;\/pre\&gt;)/g</span>, (match) =&gt;
+          """&lt;h<span class="comment">#{header.level}&gt;&lt;a name="#{header.slug}" class="anchor" href="##{header.slug}"&gt;&lt;span&gt;&lt;/span&gt;&lt;/a&gt;#{header.title}&lt;/h#{header.level}&gt;"""</span></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>temporary replace auto-links inside code blocks</p></div></div><div class="code"><div class="wrapper">        markdown = <span class="property">@gsub</span> markdown, <span class="regexp">/(\&lt;pre\&gt;.*)(\[[^\]]+\])(.*\&lt;\/pre\&gt;)/g</span>, (match) =&gt;
           match[<span class="number">1</span>] + match[<span class="number">2</span>].replace(<span class="string">"["</span>, <span class="string">"{{_{{"</span>).replace(<span class="string">"]"</span>, <span class="string">"}}_}}"</span>) + match[<span class="number">3</span>]
         markdown = <span class="property">@gsub</span> markdown, <span class="regexp">/(\&lt;code\&gt;.*)(\[[^\]]+\])(.*\&lt;\/code\&gt;)/g</span>, (match) =&gt;
           match[<span class="number">1</span>] + match[<span class="number">2</span>].replace(<span class="string">"["</span>, <span class="string">"{{_{{"</span>).replace(<span class="string">"]"</span>, <span class="string">"}}_}}"</span>) + match[<span class="number">3</span>]
