--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ citare, if you are interested.</p>
 the <code>citare</code> command.  File names and globs are defined as an array with the key <code>glob</code>.  For
 example, citare&#39;s own configuration is:</p>
 <pre><code>{
-  &quot;glob&quot;: <span class="autolink">[&quot;lib/**/*.coffee&quot;, &quot;lib/**/*.js&quot;, &quot;lib/**/*.jade&quot;, &quot;lib/**/*.styl&quot;, &quot;**/README.md&quot;]</span>,
+  &quot;glob&quot;: [&quot;lib/**/*.coffee&quot;, &quot;lib/**/*.js&quot;, &quot;lib/**/*.jade&quot;, &quot;lib/**/*.styl&quot;, &quot;**/README.md&quot;],
   &quot;except&quot;: <span class="autolink">[&quot;lib/**/jquery.min.js&quot;]</span>,
   &quot;repository-url&quot;: &quot;https://github.com/druide/citare-scriptum&quot;,
   &quot;gfm&quot;: false
