--- a/lib/styles/callout/style.html
+++ b/lib/styles/callout/style.html
@@ -540,8 +540,11 @@ a
   <span class="class">.keyword</span>, <span class="class">.winutils</span>, <span class="class">.method</span>, <span class="class">.addition</span>, <span class="class">.css</span> <span class="class">.tag</span>, <span class="class">.request</span>, <span class="class">.status</span>, <span class="class">.nginx</span> <span class="class">.title</span>
     <span class="tag">color</span> <span class="id">#859900</span>
 
-  <span class="class">.number</span>, <span class="class">.command</span>, <span class="class">.string</span>, <span class="class">.tag</span> <span class="class">.value</span>, <span class="class">.phpdoc</span>, <span class="class">.tex</span> <span class="class">.formula</span>, <span class="class">.regexp</span>, <span class="class">.hexcolor</span>
+  <span class="class">.number</span>, <span class="class">.command</span>, <span class="class">.string</span>, <span class="class">.tag</span> <span class="class">.value</span>, <span class="class">.phpdoc</span>, <span class="class">.tex</span> <span class="class">.formula</span>, <span class="class">.hexcolor</span>
     <span class="tag">color</span> <span class="id">#2aa198</span>
+
+ <span class="class">.regexp</span>
+    <span class="tag">color</span> <span class="id">#C343EB</span>
 
   <span class="class">.title</span>, <span class="class">.localvars</span>, <span class="class">.chunk</span>, <span class="class">.decorator</span>, <span class="class">.built_in</span>, <span class="class">.identifier</span>, <span class="class">.vhdl</span> <span class="class">.literal</span>, <span class="class">.literal</span>, <span class="class">.id</span>
     <span class="tag">color</span> <span class="id">#268bd2</span>
