--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ you just type <code>citare</code>.</p>
 </li>
 </ul>
 <p>Contains <a href="http://druide.github.com/citare-scriptum/lib/utils/brief.html">brief</a> function specification highlight (works with github flavored markdown):</p>
-<p><code>functionName(Type argument1, Type1/Type2 argument2, Type optionalArgument1?): Type</code></p>
+<pre><code><span class="brief"><span class="title">functionName</span>(<span class="attribute">Type </span>argument1, <span class="attribute">Type1/Type2 </span>argument2, <span class="optional"><span class="attribute">Type </span>optionalArgument1?</span>): <span class="attribute">Type</span></span></code></pre>
 <h2><a name="how" class="anchor" href="#how"><span></span></a>How?</h2>
 <h3><a name="installing-citare" class="anchor" href="#installing-citare"><span></span></a>Installing citare</h3>
 <p>Citare depends on <a href="http://nodejs.org/">Node.js</a>. Once you have this installed - and assuming that
@@ -49,9 +49,8 @@ the <code>citare</code> command.  File names and globs are defined as an array w
 example, citare&#39;s own configuration is:</p>
 <pre><code>{
   &quot;glob&quot;: [&quot;lib/**/*.coffee&quot;, &quot;lib/**/*.js&quot;, &quot;lib/**/*.jade&quot;, &quot;lib/**/*.styl&quot;, &quot;**/README.md&quot;],
-  &quot;except&quot;: <span class="autolink">[&quot;lib/**/jquery.min.js&quot;]</span>,
-  &quot;repository-url&quot;: &quot;https://github.com/druide/citare-scriptum&quot;,
-  &quot;gfm&quot;: false
+  &quot;except&quot;: [&quot;lib/**/jquery.min.js&quot;],
+  &quot;repository-url&quot;: &quot;https://github.com/druide/citare-scriptum&quot;
 }</code></pre>
 <p>From now on, if you call <code>citare</code> without any arguments, it will use your pre-defined configuration.</p>
 <h2><a name="difference-from-groc" class="anchor" href="#difference-from-groc"><span></span></a>Difference from groc</h2>
